# evaluate_stacks

./: .gitignore  README.md
docs/: api_design.md  database_generation.md  further_study.md  jj_bookmark_log.md
programs/: README.md  schema.proto
programs/database/: db1_insert.sql  db1_insert_v2.sql  tables.sql  tables_v2.sql
programs/frontend/: package-lock.json  package.json
programs/py_backend/: main.py  pyproject.toml
programs/rs_backend/: Cargo.toml
programs/rs_backend/src/: main.rs  types.rs
programs/rs_backend/src/api/: create.rs  delete.rs  mod.rs  read.rs  types.rs  update.rs
programs/rs_backend/src/api/endpoints/: create.rs  delete.rs  read.rs  update.rs
programs/rs_backend/src/api/types/: error.rs  extractor.rs  mod.rs  queries.rs
programs/rs_backend/src/api/utils/: mod.rs  query_all.rs  query_shared.rs  query_some.rs
programs/rs_backend/src/db/sqlx/: mod.rs  rmdb.rs
programs/rs_backend/src/db/sqlx/rmdb/: delete_some.rs  insert_some.rs  mod.rs  query_all.rs  query_some.rs  update_some.rs
programs/rs_backend/src/types/: mod.rs
programs/rs_backend/src/types/entities/: list.rs  mod.rs  set.rs  todo.rs
programs/rs_backend/src/types/queries/: mod.rs  targets.rs  updates.rs
programs/ts_backend/: package.json
programs/ts_deno_backend/: main.ts
programs/ts_node_backend/: package-lock.json
