[package]
name = "to_do"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
len-trait = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
